[package]
name = "ibc-reflect"
version = "0.0.3"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
default = []
# Use cranelift backend instead of singlepass. This is required for development on Windows.
cranelift = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
provwasm-std = { version = "1.1.0" }
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.1.3", features = ["iterator", "ibc3"] }
cosmwasm-storage = { version = "1.1.3", features = ["iterator"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
provwasm-mocks = { version = "1.1.0" }
cw-multi-test = "0.15.1"